force-app/main/default/objects/Simulation_Burndown_Week__c/Simulation_Burndown_Week__c.object-meta.xml
<CustomObject>
    <label>Simulation Burndown Week</label>
    <nameField>
        <displayFormat>SBW-{000000}</displayFormat>
        <label>Simulation Burndown Week Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simulation Burndown Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>