force-app/main/default/objects/Simulation_Burndown_Week__c/fields/Remaining_Stories__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Stories__c</fullName>
    <label>Remaining Stories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>