force-app/main/default/objects/Simulation_Burndown_Week__c/fields/Simulation_Burndown__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Burndown__c</fullName>
    <label>Simulation Burndown</label>
    <referenceTo>Simulation_Burndown__c</referenceTo>
    <relationshipLabel>Simulation Burndown Weeks</relationshipLabel>
    <relationshipName>Simulation_Burndown_Weeks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>