force-app/main/default/objects/Simulation_Burndown_Week__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <required>true</required>
    <type>Date</type>
</CustomField>